--- a/faq.html
+++ b/faq.html
@@ -7,12 +7,12 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs//6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/-16x16.png">
 <link rel="manifest" href="/site.webmanifest">  
-<link rel="shortcut icon" href="../favicon/favicon.ico" type="image/x-icon">
+
 <script src="https://unpkg.com/feather-icons"></script>
 </head>
 <body>
@@ -83,23 +83,23 @@ svg {
            
         <button class="accordion"> 
            <h2><i class="fa-regular fa-circle-question fa-beat" style="color: #fbae3c; padding-right: 10px;"></i>
-          What is fashion waste and fast fashion?</h2>
+          What is  and ?</h2>
         </button>
 <div class="panel">
-  <p>Fashion waste includes wasted clothing, accessories, and textiles, all of which contribute to environmental and societal challenges. Fast fashion is the rapid production of low-cost clothing collections, which frequently results in low-quality products that are abandoned. Both contribute to the waste of fashion.
+  <p> includes wasted clothing, accessories, and textiles, all of which contribute to environmental and societal challenges.  is the rapid production of low-cost clothing collections, which frequently results in low-quality products that are abandoned. Both contribute to the waste of fashion.
   </p>
 </div>
 
 <button class="accordion"><h2><i class="fa-regular fa-circle-question fa-beat" style="color: #fbae3c;padding-right: 10px;"></i>
-  Why is fashion waste a problem?</h2></button>
+  Why is  a problem?</h2></button>
 <div class="panel">
-  <p>Because of fast fashion and excessive consumption, fashion waste contributes to environmental challenges such as landfill waste, resource depletion, water pollution, and greenhouse gas emissions.
+  <p>Because of  and excessive consumption,  contributes to environmental challenges such as landfill waste, resource depletion, water pollution, and greenhouse gas emissions.
   </p>
 </div>
 
 <button class="accordion"><h2>
   <i class="fa-regular fa-circle-question fa-beat" style="color: #fbae3c;padding-right: 10px;"></i>
-  How can consumers make a difference in reducing fashion waste?
+  How can consumers make a difference in reducing ?
 </h2></button>
 <div class="panel">
   <p>Consumers may help the environment by practicing thoughtful buying, repairing clothing, extending the lifespan of garments, and supporting circular fashion initiatives.</p>
@@ -107,16 +107,16 @@ svg {
 
 <button class="accordion"><h2>
   <i class="fa-regular fa-circle-question fa-beat" style="color: #fbae3c;padding-right: 10px;"></i>
-  How can the fashion industry address fashion waste?
+  How can the fashion industry address ?
 </h2></button>
 <div class="panel">
-  <p>The fashion industry can reduce fashion waste by prioritizing sustainable production processes, implementing circular business models, investing in eco-friendly material research and development, and encouraging transparency throughout the supply chain.
+  <p>The fashion industry can reduce  by prioritizing sustainable production processes, implementing circular business models, investing in eco-friendly material research and development, and encouraging transparency throughout the supply chain.
   </p>
 </div>
 
 <button class="accordion"><h2>
   <i class="fa-regular fa-circle-question fa-beat" style="color: #fbae3c;padding-right: 10px;"></i>
-  What is the role of recycling in reducing fashion waste?
+  What is the role of recycling in reducing ?
 </h2></button>
 <div class="panel">
   <p>Recycling textiles involves converting old clothing into fibers for new products, which is difficult due to complicated fabric blends and insufficient infrastructure.
@@ -125,7 +125,7 @@ svg {
 
 <button class="accordion"><h2>
   <i class="fa-regular fa-circle-question fa-beat" style="color: #fbae3c;padding-right: 10px;"></i>
-  Are there sustainable alternatives to fast fashion?
+  Are there sustainable alternatives to ?
 </h2></button>
 <div class="panel">
   <p>Yes, shopping from ethical and ecologically conscious labels, selecting timeless and durable pieces, participating in clothes swaps, and exploring second-hand and vintage shops are all examples of sustainable fashion possibilities.
