--- a/sol.html
+++ b/sol.html
@@ -6,13 +6,13 @@
     <title>Solutions</title>
     <link rel="stylesheet" href="../stylesheets/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs//6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="../stylesheets/sol.css">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/-16x16.png">
 <link rel="manifest" href="/site.webmanifest">  
-<link rel="shortcut icon" href="../favicon/favicon.ico" type="image/x-icon">
+
 <script src="https://unpkg.com/feather-icons"></script>
     <style>
       @media (max-width: 615px) {
@@ -58,7 +58,7 @@
                 
                     <center>
                       <div class="typing">
-                        <h1 id="solH1">HOW TO ADDRESS<span style="color: #FA7268;"> FASHION WASTE?</span></h1> 
+                        <h1 id="solH1">HOW TO ADDRESS<span style="color: #FA7268;"> ?</span></h1> 
                       </div>
                     </center>   
                   <center><a href="#sol" id="nextSection"><i class="fa-solid fa-chevron-down fa-2xl fa-bounce" style="color: #fff; margin-top: 100px;
@@ -97,7 +97,7 @@
         <div class="SOL_card-pink">
             <h2 class="pink"><i class="fa-solid fa-school fa-bounce fa-xl"></i></h2>
             <p class="pink" id="infoTitle">Education</p>
-            <p style="color: white;">Educate the public about the consequences of fashion waste and encourage them to make conscious choices.</p>
+            <p style="color: white;">Educate the public about the consequences of  and encourage them to make conscious choices.</p>
         </div>
         <div class="SOL_card">
             <h2><i class="fa-solid fa-lightbulb fa-2xl fa-bounce"></i></h2>
@@ -109,7 +109,7 @@
 
     <section id="steps">
       <center>
-        <h1 class="solHEADING" style="padding-top: 140px;">STEPS TAKEN BY THE GOVERNMENT TO TACKLE FASHION WASTE</h1>
+        <h1 class="solHEADING" style="padding-top: 140px;">STEPS TAKEN BY THE GOVERNMENT TO TACKLE </h1>
         </center>
       
 
@@ -133,12 +133,12 @@
           <div class="SOL_card-pink">
               <h2 class="pink"><i class="fa-solid fa-building-ngo fa-bounce fa-xl"></i></h2>
               <p id="infoTitle" class="pink" >GOVERMENT NGO'S</p>
-              <p style="color: white;">To inform customers about the negative environmental effects of fast fashion and to encourage sustainable fashion choices, the Indian government and a number of non-governmental organizations (NGOs) have launched awareness campaigns.</p>
+              <p style="color: white;">To inform customers about the negative environmental effects of  and to encourage sustainable fashion choices, the Indian government and a number of non-governmental organizations (NGOs) have launched awareness campaigns.</p>
           </div>
           <div class="SOL_card">
               <h2><i class="fa-solid fa-shirt fa-bounce fa-xl"></i></h2>
               <p id="infoTitle">Traditional Textiles</p>
-              <p>An effort has been made to support the traditional handicraft and handloom businesses. Compared to manufactured fast fashion goods, these sectors frequently generate apparel with reduced environmental footprints.</p>
+              <p>An effort has been made to support the traditional handicraft and handloom businesses. Compared to manufactured  goods, these sectors frequently generate apparel with reduced environmental footprints.</p>
           </div>
           <div class="SOL_card-pink" id="responsive">
               <h2 class="pink"><i class="fa-solid fa-recycle fa-bounce fa-xl"></i></h2>
